--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   </div>
 <!--手机版导航栏-->
   <div class="menu-list" id="menu-list">
-    <a href="https://blog.zhheo.com/" class="nav-item" target="_blank">博客</a>
+    <a href="https://blog.springing.top/" class="nav-item" target="_blank">博客</a>
     <a href="javascript:heoWeb.scrollTo('服务');" class="nav-item">服务</a>
     <a href="javascript:heoWeb.scrollTo('主题');" class="nav-item">主题</a>
   </div>
@@ -58,13 +58,13 @@
         <span class="discription-text">小春子是一个<del>爱学习</del><br>很有趣的小男女孩</span>
       </div>
       <div class="first-stack-links">
-        <a href="https://blog.zhheo.com/about/" class="about-button" target="_blank">了解更多</a>
-        <a href="https://github.com/zhheo" class="about-button social-button" target="_blank">Github</a>
+        <a href="https://blog.springing.top/about/" class="about-button" target="_blank">了解更多</a>
+        <a href="https://github.com/lispringing" class="about-button social-button" target="_blank">Github</a>
         <a href="https://dribbble.com/zhheo" class="about-button social-button" target="_blank">项目</a>
       </div>
       
     </div>
-    <a href="https://blog.zhheo.com/about/" class="right-stack" target="_blank">
+    <a href="https://blog.springing.top/about/" class="right-stack" target="_blank">
       <img class="banner-img" src="./img/dog-black.webp" alt="banner" title="banner">
     </a>
   </div>
