新增项目页面

--- a/index.html
+++ b/index.html
@@ -30,22 +30,20 @@
       </div>
 <!--中间导航栏,js代码-->
       <div class="nav-center">
-        <a href="javascript:heoWeb.scrollTo('应用');" class="nav-item">应用</a>
-        <a href="javascript:heoWeb.scrollTo('服务');" class="nav-item">服务</a>
-        <a href="javascript:heoWeb.scrollTo('主题');" class="nav-item">主题</a>
+        <a href="javascript:heoWeb.scrollTo('项目');" class="nav-item">项目</a>
       </div>
 <!--右侧博客link-->
       <div class="nav-right">
         <a href="https://blog.springing.top/" class="nav-item" target="_blank">博客</a>
-        <a class="nav-menu" id="nav-menu"><span class="heofont icon-menu-fill"></span></a>
+        <!--手机版的展开按钮-->
+        <a class="nav-menu" id="nav-menu"><span>≡</span></a>
       </div>
     </div>
   </div>
 <!--手机版导航栏-->
   <div class="menu-list" id="menu-list">
     <a href="https://blog.springing.top/" class="nav-item" target="_blank">博客</a>
-    <a href="javascript:heoWeb.scrollTo('服务');" class="nav-item">服务</a>
-    <a href="javascript:heoWeb.scrollTo('主题');" class="nav-item">主题</a>
+    <a href="javascript:heoWeb.scrollTo('项目');" class="nav-item">项目</a>
   </div>
 <!--首页封面-->
   <div class="first-stack need-padding">
@@ -68,26 +66,68 @@
       <img class="banner-img" src="./img/dog-black.webp" alt="banner" title="banner">
     </a>
   </div>
-
+<!--作者自我描述-->
   <div class="avatar-discription">
     <span class="avatar-discription-text">“你可以浪迹天涯，但每到一个地方就会找网络或者电话信号给某个人报平安，就算风筝飞得再高都有抓着风筝线的人。每个人的一生都会遇见某些人，喜欢上她。有些人在合适的时问里遇到，就像是在春天遇到花开，所以一切都很好，他们会相恋、订婚、结婚、一起生活。而有的人在错误的时间遇到，就像是在冬天，隔着冰看见浮上来换气的鱼，所以只能看着，鱼换完气，沉到水下去，就看不见了，再也没有后续。但是我们能说在春天遇到花是对的，而在冬天遇到鱼是错的么？在错误的时问里遇到，就能克制自己不喜欢那个人么？是不是仍然会用尽了力气想去接近，想尽办法掩饰自己，甚至伪装成另外一条鱼。”</span>
     <img class="avatar-image" src="./img/avatar.webp">
     <span class="avatar-name">小春子</span>
-    <span class="avatar-title">烟台大学物理与电子学院在读学生</span>
+    <span class="avatar-title">做一个有意思的的人</span>
   </div>
   </div>
 
+
+<!--博客部分
+  <div class="product-banner" style="background-image: linear-gradient(180deg, #830FC1 0%, #3D00A0 100%);">
+    <div class="banner-info need-padding">
+      <span class="tips">博客</span>
+      <span class="ttitle">新奇的事物<span class="punctuation">，</span><br>有趣的思想<span class="punctuation">。</span></span>
+      <div class="banner-discription-group">
+        <span class="description">备受喜爱的知识共享<span class="inline-word">博客<span class="punctuation">，</span></span></span>
+        <span class="description">已帮助数百万互联网使用者更好的探索数字<span class="inline-word">世界<span class="punctuation">。</span></span></span>
+      </div>
+      <div class="link-group">
+        <a class="primary-button" href="https://blog.zhheo.com/">访问项目</a>
+        <a class="second-link" href="https://blog.zhheo.com/p/23be6135.html" target="_blank">博客三周年的思考</a>
+      </div>
+    </div>
+    <div class="banner-pic">
+      <img class="banner-pic-img" src="./img/banner-blog.webp" alt="banner image">
+    </div>
+  </div>
+-->
+
+
+<!--项目页面-->
+  <div class="product-group need-padding" id="项目">
+    <h2 class="group-title">项目</h2>
+    <span class="group-description">小春子的一些乱七八糟的项目</span>
+    <div class="group-items">
+      <div class="group-item">
+        <a class="group-item-icon" href="https://github.com/lispringing/springpage" target="_blank">
+          <img class="group-item-icon-img" src="./img/springingpage.webp" alt="product-icon" title="product-icon">
+        </a>
+        <div class="group-info-group">
+          <div class="group-info">
+            <a class="title" href="https://github.com/lispringing/springpage" target="_blank">Springing Page<sup class="hot">开源</sup></a>
+            <a class="discription" href="https://github.com/lispringing/springpage" target="_blank">一个仿apple主题的个人主页</a>
+          </div>
+          <div class="group-info-button">
+            <a class="linkbutton" href="https://github.com/lispringing/springpage" target="_blank">Get it</a>
+            <span class="linkbotton-tips">于Github上获取源码</span>
+          </div>
+        </div>
+      </div>
+
+
+<!--页脚-->
   <div class="footer">
     <div class="footer-content need-padding">
       <span class="info">Copyright © 2022-至今 小春子Little Spring 保留所有权利。</span>
       <span class="info">由Spring强力驱动</span>
-      <div class="info-group"><a class="info" href="https://beian.miit.gov.cn/" target="_blank">鲁ICP备2022030058号</a><a class="info" href="https://github.com/zhheo/HeoWeb" target="_blank">Theme by HeoWeb</a></div>
+      <div class="info-group"><a class="info" href="https://beian.miit.gov.cn/" target="_blank">鲁ICP备2022030058号</a><a class="info" href="https://github.com/zhheo/HeoWeb" target="_blank">Themed by HeoWeb</a></div>
     </div>
   </div>
-  
 </body>
-
 <script src="./js/simpleParallax.min.js"></script>
 <script src="./js/main.js"></script>
-
 </html>
