--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       </div>
 <!--中间导航栏,js代码-->
       <div class="nav-center">
+        <a href="javascript:heoWeb.scrollTo('音乐');" class="nav-item">音乐</a>
         <a href="javascript:heoWeb.scrollTo('项目');" class="nav-item">项目</a>
       </div>
 <!--右侧博客link-->
@@ -43,7 +44,10 @@
 <!--手机版导航栏-->
   <div class="menu-list" id="menu-list">
     <a href="https://blog.springing.top/" class="nav-item" target="_blank">博客</a>
+    <a href="javascript:heoWeb.scrollTo('音乐');" class="nav-item">音乐</a>
     <a href="javascript:heoWeb.scrollTo('项目');" class="nav-item">项目</a>
+
+
   </div>
 <!--首页封面-->
   <div class="first-stack need-padding">
@@ -56,9 +60,9 @@
         <span class="discription-text">小春子是一个<del>爱学习</del><br>很有趣的小男女孩</span>
       </div>
       <div class="first-stack-links">
-        <a href="https://blog.springing.top/about/" class="about-button" target="_blank">了解更多</a>
+        <a href="https://blog.springing.top/about/" class="about-button" target="_blank">关于春子</a>
         <a href="https://github.com/lispringing" class="about-button social-button" target="_blank">Github</a>
-        <a href="https://dribbble.com/zhheo" class="about-button social-button" target="_blank">项目</a>
+        <a href="https://blog.springing.top" class="about-button social-button" target="_blank">博客</a>
       </div>
       
     </div>
@@ -96,30 +100,64 @@
   </div>
 -->
 
+ <!-- 音乐大主页 -->
+  <div class="product-banner" id="音乐">
+    <div class="banner-info need-padding">
+      <span class="tips">Springing-HK音乐</span>
+      <span class="title">基于YesPlayMuisc<span class="punctuation">，</span><br>Netease API二次开发<span class="punctuation">。</span></span>
+      <div class="banner-discription-group">
+        <span class="description">便携移动快捷的<span class="inline-word">网页端音乐播放器<span class="punctuation">。</span></span></span>
+        <span class="description">无需安装或登录,可在线使用<span class="inline-word">各功能<span class="punctuation">。</span></span></span>
+      </div>
+      <div class="link-group">
+        <a class="primary-button" href="https://www.happyking.top">立即前往</a>
+        <a class="second-link" href="#" target="_blank">前往老版本HK音乐</a>
+      </div>
+    </div>
+    <div class="banner-pic">
+      <img class="banner-pic-img" src="./img/yesplaymusic.png" alt="banner image">
+    </div>
+  </div>
 
-<!--项目页面-->
+  <!--项目页面-->
   <div class="product-group need-padding" id="项目">
     <h2 class="group-title">项目</h2>
     <span class="group-description">小春子的一些乱七八糟的项目</span>
     <div class="group-items">
+      <!--spring-page-->
       <div class="group-item">
-        <a class="group-item-icon" href="https://github.com/lispringing/springpage" target="_blank">
+        <a class="group-item-icon" href="https://github.com/lispringing/spring-page" target="_blank">
           <img class="group-item-icon-img" src="./img/springingpage.webp" alt="product-icon" title="product-icon">
         </a>
         <div class="group-info-group">
           <div class="group-info">
-            <a class="title" href="https://github.com/lispringing/springpage" target="_blank">Springing Page<sup class="hot">开源</sup></a>
-            <a class="discription" href="https://github.com/lispringing/springpage" target="_blank">一个仿apple主题的个人主页</a>
+            <a class="title" href="https://github.com/lispringing/spring-page" target="_blank">Springing Page<sup class="hot">开源</sup></a>
+            <a class="discription" href="https://github.com/lispringing/spring-page" target="_blank">一个仿apple主题的个人主页</a>
           </div>
           <div class="group-info-button">
-            <a class="linkbutton" href="https://github.com/lispringing/springpage" target="_blank">Get it</a>
+            <a class="linkbutton" href="https://github.com/lispringing/spring-page" target="_blank">Get it</a>
             <span class="linkbotton-tips">于Github上获取源码</span>
           </div>
         </div>
       </div>
+    <!--·netease-music-api-->
+      <div class="group-item">
+        <a class="group-item-icon" href="https://netease.happyking.top/" target="_blank">
+          <img class="group-item-icon-img" src="./img/netease.webp" alt="product-icon" title="product-icon">
+        </a>
+        <div class="group-info-group">
+          <div class="group-info">
+            <a class="title" href="https://netease.happyking.top/" target="_blank">Netease API</a>
+            <a class="discription" href="https://netease.happyking.top/" target="_blank">Spring-HKmusic的音乐API</a>
+          </div>
+          <div class="group-info-button">
+            <a class="linkbutton" href="https://netease.happyking.top/" target="_blank">Use it</a>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
-
 
 <!--页脚-->
   <div class="footer">
