--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
 <!--中间导航栏,js代码-->
       <div class="nav-center">
-        <a href="javascript:heoWeb.scrollTo('音乐');" class="nav-item">音乐</a>
+        <a href="javascript:heoWeb.scrollTo('推荐');" class="nav-item">推荐</a>
         <a href="javascript:heoWeb.scrollTo('项目');" class="nav-item">项目</a>
       </div>
 <!--右侧博客link-->
@@ -44,9 +44,8 @@
 <!--手机版导航栏-->
   <div class="menu-list" id="menu-list">
     <a href="https://blog.springing.top/" class="nav-item" target="_blank">博客</a>
-    <a href="javascript:heoWeb.scrollTo('音乐');" class="nav-item">音乐</a>
+    <a href="javascript:heoWeb.scrollTo('推荐');" class="nav-item">推荐</a>
     <a href="javascript:heoWeb.scrollTo('项目');" class="nav-item">项目</a>
-
 
   </div>
 <!--首页封面-->
@@ -79,29 +78,27 @@
   </div>
   </div>
 
-
-<!--博客部分
-  <div class="product-banner" style="background-image: linear-gradient(180deg, #830FC1 0%, #3D00A0 100%);">
+<!--一中南街1号回忆录-->
+  <div id='回忆录'class="product-banner" style="background-image: linear-gradient(180deg, #830FC1 0%, #3D00A0 100%);">
     <div class="banner-info need-padding">
-      <span class="tips">博客</span>
-      <span class="ttitle">新奇的事物<span class="punctuation">，</span><br>有趣的思想<span class="punctuation">。</span></span>
+      <span class="tips">一中南街1号回忆录</span>
+      <span class="ttitle">属于每一个一中人<span class="punctuation">，</span><br>独一无二的回忆录<span class="punctuation">。</span></span>
       <div class="banner-discription-group">
-        <span class="description">备受喜爱的知识共享<span class="inline-word">博客<span class="punctuation">，</span></span></span>
-        <span class="description">已帮助数百万互联网使用者更好的探索数字<span class="inline-word">世界<span class="punctuation">。</span></span></span>
+        <span class="description">“我更愿意就事论事 返回到当年的心境里 看一看当时的悲欢和忧乐。”</span>
       </div>
       <div class="link-group">
-        <a class="primary-button" href="https://blog.zhheo.com/">访问项目</a>
-        <a class="second-link" href="https://blog.zhheo.com/p/23be6135.html" target="_blank">博客三周年的思考</a>
+        <a class="primary-button" href="https://cyyz.springing.top/">访问项目</a>
+        <a class="second-link" href="https://cyyz.springing.top/#/64/start" target="_blank">作者的话-时间之外的往事</a>
       </div>
     </div>
     <div class="banner-pic">
-      <img class="banner-pic-img" src="./img/banner-blog.webp" alt="banner image">
+      <img class="banner-pic-img" src="./img/cyyz.webp" alt="banner image">
     </div>
   </div>
--->
+
 
  <!-- 音乐大主页 -->
-  <div class="product-banner" id="音乐">
+  <div class="product-banner" id="推荐">
     <div class="banner-info need-padding">
       <span class="tips">Springing-HK音乐</span>
       <span class="title">基于YesPlayMuisc<span class="punctuation">，</span><br>Netease API二次开发<span class="punctuation">。</span></span>
@@ -122,7 +119,7 @@
   <!--项目页面-->
   <div class="product-group need-padding" id="项目">
     <h2 class="group-title">项目</h2>
-    <span class="group-description">小春子的一些乱七八糟的项目</span>
+    <span class="group-description">小春子的项目汇总</span>
     <div class="group-items">
       <!--spring-page-->
       <div class="group-item">
@@ -140,6 +137,24 @@
           </div>
         </div>
       </div>
+
+      <!--spring-hk-music-->
+      <div class="group-item">
+        <a class="group-item-icon" href="https://www.happyking.top" target="_blank">
+          <img class="group-item-icon-img" src="./img/springingpage.webp" alt="product-icon" title="product-icon">
+        </a>
+        <div class="group-info-group">
+          <div class="group-info">
+            <a class="title" href="https://www.happyking.top" target="_blank">Springing HK Music</a>
+            <a class="discription" href="https://github.com/lispringing/spring-page" target="_blank">基于vue.js的在线音乐网站</a>
+          </div>
+          <div class="group-info-button">
+            <a class="linkbutton" href="https://github.com/lispringing/spring-page" target="_blank">Use it</a>
+            <span class="linkbotton-tips">前往Springing HK Music体验</span>
+          </div>
+        </div>
+      </div>
+
     <!--·netease-music-api-->
       <div class="group-item">
         <a class="group-item-icon" href="https://netease.happyking.top/" target="_blank">
@@ -159,10 +174,11 @@
     </div>
   </div>
 
+
 <!--页脚-->
   <div class="footer">
     <div class="footer-content need-padding">
-      <span class="info">Copyright © 2022-至今 小春子Little Spring 保留所有权利。</span>
+      <span class="info">Copyright © 2022-至今 小春子 保留所有权利。</span>
       <span class="info">由Spring强力驱动</span>
       <div class="info-group"><a class="info" href="https://beian.miit.gov.cn/" target="_blank">鲁ICP备2022030058号</a><a class="info" href="https://github.com/zhheo/HeoWeb" target="_blank">Themed by HeoWeb</a></div>
     </div>
