--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       </div>
 <!--中间导航栏,js代码-->
       <div class="nav-center">
-        <a href="javascript:heoWeb.scrollTo('推荐');" class="nav-item">推荐</a>
+        <a href="javascript:heoWeb.scrollTo('回忆录');" class="nav-item">推荐</a>
         <a href="javascript:heoWeb.scrollTo('项目');" class="nav-item">项目</a>
       </div>
 <!--右侧博客link-->
@@ -44,7 +44,7 @@
 <!--手机版导航栏-->
   <div class="menu-list" id="menu-list">
     <a href="https://blog.springing.top/" class="nav-item" target="_blank">博客</a>
-    <a href="javascript:heoWeb.scrollTo('推荐');" class="nav-item">推荐</a>
+    <a href="javascript:heoWeb.scrollTo('回忆录');" class="nav-item">推荐</a>
     <a href="javascript:heoWeb.scrollTo('项目');" class="nav-item">项目</a>
 
   </div>
@@ -63,20 +63,26 @@
         <a href="https://github.com/lispringing" class="about-button social-button" target="_blank">Github</a>
         <a href="https://blog.springing.top" class="about-button social-button" target="_blank">博客</a>
       </div>
-      
     </div>
     <a href="https://blog.springing.top/about/" class="right-stack" target="_blank">
       <img class="banner-img" src="./img/dog-black.webp" alt="banner" title="banner">
     </a>
   </div>
 <!--作者自我描述-->
-  <div class="avatar-discription">
-    <span class="avatar-discription-text">“你可以浪迹天涯，但每到一个地方就会找网络或者电话信号给某个人报平安，就算风筝飞得再高都有抓着风筝线的人。每个人的一生都会遇见某些人，喜欢上她。有些人在合适的时问里遇到，就像是在春天遇到花开，所以一切都很好，他们会相恋、订婚、结婚、一起生活。而有的人在错误的时间遇到，就像是在冬天，隔着冰看见浮上来换气的鱼，所以只能看着，鱼换完气，沉到水下去，就看不见了，再也没有后续。但是我们能说在春天遇到花是对的，而在冬天遇到鱼是错的么？在错误的时问里遇到，就能克制自己不喜欢那个人么？是不是仍然会用尽了力气想去接近，想尽办法掩饰自己，甚至伪装成另外一条鱼。”</span>
-    <img class="avatar-image" src="./img/avatar.webp">
-    <span class="avatar-name">小春子</span>
-    <span class="avatar-title">做一个有意思的的人</span>
+<div class="avatar-discription">
+  <span class="avatar-discription-text">
+    <p>
+      “你可以浪迹天涯，但每到一个地方就会找网络或者电话信号给某个人报平安，就算风筝飞得再高都有抓着风筝线的人。
+      <b>每个人的一生都会遇见某些人，喜欢上她。</b>有些人在合适的时问里遇到，就像是在春天遇到花开，所以一切都很好，他们会相恋、订婚、结婚、一起生活。而有的人在错误的时间遇到，就像是在冬天，隔着冰看见浮上来换气的鱼，所以只能看着，鱼换完气，沉到水下去，就看不见了，再也没有后续。"
+      <br><br><b>但是我们能说在春天遇到花是对的，而在冬天遇到鱼是错的么？</b>在错误的时问里遇到，就能克制自己不喜欢那个人么？是不是仍然会用尽了力气想去接近，想尽办法掩饰自己，甚至伪装成另外一条鱼。”
+    </p>
+  </span>
+  <div class="avatar-info">
+    <img loading="lazy" class="avatar-image" src="./img/avatar.webp">
+    <span class="avatar-name">爱学习的春子</span>
+    <span class="avatar-title">努力的做一个有意思，很好很棒的人。</span>
   </div>
-  </div>
+</div>
 
 <!--一中南街1号回忆录-->
   <div id='回忆录'class="product-banner" style="background-image: linear-gradient(180deg, #830FC1 0%, #3D00A0 100%);">
@@ -88,7 +94,7 @@
       </div>
       <div class="link-group">
         <a class="primary-button" href="https://cyyz.springing.top/">访问项目</a>
-        <a class="second-link" href="https://cyyz.springing.top/#/64/start" target="_blank">作者的话-时间之外的往事</a>
+        <a class="second-link" href="https://cyyz.springing.top/#/64/start" target="_blank">作者的话:时间之外的往事</a>
       </div>
     </div>
     <div class="banner-pic">
@@ -96,9 +102,49 @@
     </div>
   </div>
 
+ <!--1中南街下面的-->
+ <div class="product-group need-padding" id="#">
+  <h2 class="group-title">相关</h2>
+  <span class="group-description">一中南街1号回忆录</span>
+  <div class="group-items">
+    <!--南街1号-->
+    <div class="group-item">
+      <a class="group-item-icon" href="https://cyyz.springing.top" target="_blank">
+        <img class="group-item-icon-img" src="./img/cyyz-logo.webp" alt="product-icon" title="product-icon">
+      </a>
+      <div class="group-info-group">
+        <div class="group-info">
+          <a class="title" href="https://cyyz.springing.top" target="_blank">一中南街1号回忆录<sup class="hot">项目</sup></a>
+          <a class="discription" href="https://cyyz.springing.top" target="_blank">独属于一中人自己的回忆录</a>
+        </div>
+        <div class="group-info-button">
+          <a class="linkbutton" href="https://cyyz.springing.top" target="_blank">访问</a>
+        </div>
+      </div>
+    </div>
+    <!--南街仓库-->
+    <div class="group-item">
+      <a class="group-item-icon" href="https://github.com/lispringing/CYYZ" target="_blank">
+        <img class="group-item-icon-img" src="./img/github.webp" alt="product-icon" title="product-icon">
+      </a>
+      <div class="group-info-group">
+        <div class="group-info">
+          <a class="title" href="https://github.com/lispringing/CYYZ" target="_blank">一中南街1号回忆录<sup class="hot">仓库</sup></a>
+          <a class="discription" href="https://github.com/lispringing/CYYZ" target="_blank">一中南街1号回忆录的源代码仓库</a>
+        </div>
+        <div class="group-info-button">
+          <a class="linkbutton" href="https://github.com/lispringing/CYYZ" target="_blank">Get it</a>
+          <span class="linkbotton-tips">于Github上获取源码</span>
+        </div>
+      </div>
+    </div>
+
+  </div>
+</div>
+
 
  <!-- 音乐大主页 -->
-  <div class="product-banner" id="推荐">
+  <div class="product-banner" id="#">
     <div class="banner-info need-padding">
       <span class="tips">Springing-HK音乐</span>
       <span class="title">基于YesPlayMuisc<span class="punctuation">，</span><br>Netease API二次开发<span class="punctuation">。</span></span>
@@ -174,6 +220,20 @@
     </div>
   </div>
 
+<!--
+  <div class="special-card">
+    <div class="special-card-left">
+      <div class="tips">大事件</div>
+      <div class="title">敲木鱼9.0支持<br>现实增强</div>
+      <div class="discription">现在你可以使用你敲木鱼的AR模式，将喜欢的音效贴纸放置在任何你想要的位置上。</div>
+      <div class="button-group">
+        <a class="button linkbutton" href="https://apps.apple.com/cn/app/%E6%95%B2%E6%9C%A8%E9%B1%BC/id6443798663">立即前往购买</a>
+        <span class="linkbotton-tips">买断制</span>
+      </div>
+    </div>
+    <img loading="lazy" class="special-card-right" src="./img/muyu-ar.webp">
+  </div>
+-->
 
 <!--页脚-->
   <div class="footer">
