--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
       </a>
       <div class="group-info-group">
         <div class="group-info">
-          <a class="title" href="https://github.com/lispringing/CYYZ" target="_blank">一中南街1号回忆录<sup class="hot">仓库</sup></a>
+          <a class="title" href="https://github.com/lispringing/CYYZ" target="_blank">一中南街1号回忆录</a>
           <a class="discription" href="https://github.com/lispringing/CYYZ" target="_blank">一中南街1号回忆录的源代码仓库</a>
         </div>
         <div class="group-info-button">
