--- a/index.html
+++ b/index.html
@@ -217,6 +217,22 @@
         </div>
       </div>
 
+      <!--南街1号-->
+      <div class="group-item">
+        <a class="group-item-icon" href="https://cyyz.springing.top" target="_blank">
+          <img class="group-item-icon-img" src="./img/cyyz-logo.webp" alt="product-icon" title="product-icon">
+        </a>
+        <div class="group-info-group">
+          <div class="group-info">
+            <a class="title" href="https://cyyz.springing.top" target="_blank">一中南街1号回忆录<sup class="hot">项目</sup></a>
+            <a class="discription" href="https://cyyz.springing.top" target="_blank">独属于一中人自己的回忆录</a>
+          </div>
+          <div class="group-info-button">
+            <a class="linkbutton" href="https://cyyz.springing.top" target="_blank">访问</a>
+          </div>
+        </div>
+      </div>
+
     </div>
   </div>
 
