--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Springing - 发现创造有意思的事物跟人</title>
   <!--引入css,js等必要文件-->
-  <link rel="stylesheet" href="./main.css">
+  <link rel="stylesheet" href="./css/main.css">
   <link rel="icon" type="image/x-icon" href="./img/avatar.webp">
   <link rel="apple-touch-icon" href="./img/avatar.webp">
   <meta name="apple-mobile-we b-app-title" content="小春子">
@@ -55,8 +55,8 @@
         <span class="title">小春子</span>
         <span class="title">Little Springing</span></span>
       </div>
-      <div class="discription">
-        <span class="discription-text">小春子是一个<del>爱学习</del><br>很有趣的小男女孩</span>
+      <div class="description">
+        <span class="description-text">小春子是一个<del>爱学习</del><br>很有趣的小男女孩</span>
       </div>
       <div class="first-stack-links">
         <a href="https://blog.springing.top/about/" class="about-button" target="_blank">关于春子</a>
@@ -103,7 +103,7 @@
   </div>
 
  <!--1中南街下面的-->
- <div class="product-group need-padding" id="#">
+ <div class="product-group need-padding" id="">
   <h2 class="group-title">相关</h2>
   <span class="group-description">一中南街1号回忆录</span>
   <div class="group-items">
