--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <meta name="description" content="Springing - 发现创造有意思的事物跟人">
   <meta name="theme-color" content="#1C1C1F">
   <link rel="stylesheet" href="./css/iconfont.css">
-  <script src="https://lf9-cdn-tos.bytecdntp.com/cdn/expire-1-M/jquery/3.6.0/jquery.min.js"></script>
+  <script src="./js/jq.js"></script>
 </head>
 
 <!--主体部分-->
@@ -31,6 +31,7 @@
 <!--中间导航栏,js代码-->
       <div class="nav-center">
         <a href="javascript:heoWeb.scrollTo('回忆录');" class="nav-item">推荐</a>
+        <a href="javascript:heoWeb.scrollTo('应用');" class="nav-item">应用</a>
         <a href="javascript:heoWeb.scrollTo('项目');" class="nav-item">项目</a>
       </div>
 <!--右侧博客link-->
@@ -45,6 +46,7 @@
   <div class="menu-list" id="menu-list">
     <a href="https://blog.springing.top/" class="nav-item" target="_blank">博客</a>
     <a href="javascript:heoWeb.scrollTo('回忆录');" class="nav-item">推荐</a>
+    <a href="javascript:heoWeb.scrollTo('应用');" class="nav-item">应用</a>
     <a href="javascript:heoWeb.scrollTo('项目');" class="nav-item">项目</a>
 
   </div>
@@ -79,7 +81,7 @@
   </span>
   <div class="avatar-info">
     <img loading="lazy" class="avatar-image" src="./img/avatar.webp">
-    <span class="avatar-name">爱学习的春子</span>
+    <span class="avatar-name">爱睡觉的小春子</span>
     <span class="avatar-title">努力的做一个有意思，很好很棒的人。</span>
   </div>
 </div>
@@ -114,7 +116,7 @@
       </a>
       <div class="group-info-group">
         <div class="group-info">
-          <a class="title" href="https://cyyz.springing.top" target="_blank">一中南街1号回忆录<sup class="hot">项目</sup></a>
+          <a class="title" href="https://cyyz.springing.top" target="_blank">一中南街1号回忆录<sup class="hot">应用</sup></a>
           <a class="discription" href="https://cyyz.springing.top" target="_blank">独属于一中人自己的回忆录</a>
         </div>
         <div class="group-info-button">
