--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 <!--中间导航栏,js代码-->
       <div class="nav-center">
         <a href="javascript:heoWeb.scrollTo('回忆录');" class="nav-item">推荐</a>
+        <a href="javascript:heoWeb.scrollTo('音乐');" class="nav-item">音乐</a>
         <a href="javascript:heoWeb.scrollTo('应用');" class="nav-item">应用</a>
         <a href="javascript:heoWeb.scrollTo('项目');" class="nav-item">项目</a>
       </div>
@@ -46,6 +47,7 @@
   <div class="menu-list" id="menu-list">
     <a href="https://blog.springing.top/" class="nav-item" target="_blank">博客</a>
     <a href="javascript:heoWeb.scrollTo('回忆录');" class="nav-item">推荐</a>
+    <a href="javascript:heoWeb.scrollTo('音乐');" class="nav-item">音乐</a>
     <a href="javascript:heoWeb.scrollTo('应用');" class="nav-item">应用</a>
     <a href="javascript:heoWeb.scrollTo('项目');" class="nav-item">项目</a>
 
@@ -146,7 +148,7 @@
 
 
  <!-- 音乐大主页 -->
-  <div class="product-banner" id="#">
+  <div class="product-banner" id="音乐">
     <div class="banner-info need-padding">
       <span class="tips">Springing-HK音乐</span>
       <span class="title">基于YesPlayMuisc<span class="punctuation">，</span><br>Netease API二次开发<span class="punctuation">。</span></span>
@@ -156,7 +158,6 @@
       </div>
       <div class="link-group">
         <a class="primary-button" href="https://www.happyking.top">立即前往</a>
-        <a class="second-link" href="#" target="_blank">前往老版本HK音乐</a>
       </div>
     </div>
     <div class="banner-pic">
