博客页面添加

--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
       <div class="nav-center">
         <a href="javascript:heoWeb.scrollTo('回忆录');" class="nav-item">推荐</a>
         <a href="javascript:heoWeb.scrollTo('音乐');" class="nav-item">音乐</a>
+        <a href="javascript:heoWeb.scrollTo('博客');" class="nav-item">文章</a>
         <a href="javascript:heoWeb.scrollTo('应用');" class="nav-item">应用</a>
         <a href="javascript:heoWeb.scrollTo('项目');" class="nav-item">项目</a>
       </div>
@@ -48,6 +49,7 @@
     <a href="https://blog.springing.top/" class="nav-item" target="_blank">博客</a>
     <a href="javascript:heoWeb.scrollTo('回忆录');" class="nav-item">推荐</a>
     <a href="javascript:heoWeb.scrollTo('音乐');" class="nav-item">音乐</a>
+    <a href="javascript:heoWeb.scrollTo('博客');" class="nav-item">文章</a>
     <a href="javascript:heoWeb.scrollTo('应用');" class="nav-item">应用</a>
     <a href="javascript:heoWeb.scrollTo('项目');" class="nav-item">项目</a>
 
@@ -118,7 +120,7 @@
       </a>
       <div class="group-info-group">
         <div class="group-info">
-          <a class="title" href="https://cyyz.springing.top" target="_blank">一中南街1号回忆录<sup class="hot">应用</sup></a>
+          <a class="title" href="https://cyyz.springing.top" target="_blank">一中南街1号回忆录<sup class="hot">独家</sup></a>
           <a class="discription" href="https://cyyz.springing.top" target="_blank">独属于一中人自己的回忆录</a>
         </div>
         <div class="group-info-button">
@@ -165,27 +167,11 @@
     </div>
   </div>
 
-  <!--项目页面-->
-  <div class="product-group need-padding" id="项目">
-    <h2 class="group-title">项目</h2>
-    <span class="group-description">小春子的项目汇总</span>
+  <!--音乐页面相关-->
+  <div class="product-group need-padding">
+    <h2 class="group-title">相关</h2>
+    <span class="group-description">Springing Music</span>
     <div class="group-items">
-      <!--spring-page-->
-      <div class="group-item">
-        <a class="group-item-icon" href="https://github.com/lispringing/spring-page" target="_blank">
-          <img class="group-item-icon-img" src="./img/springingpage.webp" alt="product-icon" title="product-icon">
-        </a>
-        <div class="group-info-group">
-          <div class="group-info">
-            <a class="title" href="https://github.com/lispringing/spring-page" target="_blank">Springing Page<sup class="hot">开源</sup></a>
-            <a class="discription" href="https://github.com/lispringing/spring-page" target="_blank">一个仿apple主题的个人主页</a>
-          </div>
-          <div class="group-info-button">
-            <a class="linkbutton" href="https://github.com/lispringing/spring-page" target="_blank">Get it</a>
-            <span class="linkbotton-tips">于Github上获取源码</span>
-          </div>
-        </div>
-      </div>
 
       <!--spring-hk-music-->
       <div class="group-item">
@@ -220,22 +206,25 @@
         </div>
       </div>
 
-      <!--南街1号-->
-      <div class="group-item">
-        <a class="group-item-icon" href="https://cyyz.springing.top" target="_blank">
-          <img class="group-item-icon-img" src="./img/cyyz-logo.webp" alt="product-icon" title="product-icon">
-        </a>
-        <div class="group-info-group">
-          <div class="group-info">
-            <a class="title" href="https://cyyz.springing.top" target="_blank">一中南街1号回忆录<sup class="hot">项目</sup></a>
-            <a class="discription" href="https://cyyz.springing.top" target="_blank">独属于一中人自己的回忆录</a>
-          </div>
-          <div class="group-info-button">
-            <a class="linkbutton" href="https://cyyz.springing.top" target="_blank">访问</a>
-          </div>
-        </div>
-      </div>
 
+    </div>
+  </div>
+
+<!--博客介绍页面-->
+  <div class="product-banner" style="background-image: linear-gradient(180deg, #274DFF 0%, #6CA4FF 100%);" id="博客">
+    <div class="banner-info need-padding">
+      <span class="tips" style="color: white; opacity: 0.6;">爱睡觉的春子</span>
+      <span class="title">#<span class="punctuation">，</span><br>#<span class="punctuation">。</span></span>
+      <div class="banner-discription-group">
+        <span class="description">#<span class="inline-word">#<span class="punctuation">，</span></span></span>
+        <span class="description">#<span class="inline-word">#<span class="punctuation">。</span></span></span>
+      </div>
+      <div class="link-group">
+        <a class="primary-button" href="#a">#</a>
+      </div>
+    </div>
+    <div class="banner-pic">
+      <img loading="lazy" class="banner-pic-img simple-parallax-initialized" src="./img/banner-冰糖红茶.webp" alt="banner image" style="will-change: transform; transform: translate3d(0px, 14px, 0px); transition: transform 2s cubic-bezier(0, 0, 0, 1);">
     </div>
   </div>
 
@@ -253,6 +242,81 @@
     <img loading="lazy" class="special-card-right" src="./img/muyu-ar.webp">
   </div>
 -->
+
+
+ <!--项目页面-->
+ <div class="product-group need-padding" id="项目">
+  <h2 class="group-title">项目汇总</h2>
+  <span class="group-description">小春子的项目汇总</span>
+
+  <div class="group-items">
+    <!--spring-page-->
+    <div class="group-item">
+      <a class="group-item-icon" href="https://github.com/lispringing/spring-page" target="_blank">
+        <img class="group-item-icon-img" src="./img/github.webp" alt="product-icon" title="product-icon">
+      </a>
+      <div class="group-info-group">
+        <div class="group-info">
+          <a class="title" href="https://github.com/lispringing/spring-page" target="_blank">Springing Page</a>
+          <a class="discription" href="https://github.com/lispringing/spring-page" target="_blank">一个仿apple主题的个人主页</a>
+        </div>
+        <div class="group-info-button">
+          <a class="linkbutton" href="https://github.com/lispringing/spring-page" target="_blank">Get it</a>
+          <span class="linkbotton-tips">于Github上获取源码</span>
+        </div>
+      </div>
+    </div>
+
+    <!--南街仓库-->
+    <div class="group-item">
+      <a class="group-item-icon" href="https://github.com/lispringing/CYYZ" target="_blank">
+        <img class="group-item-icon-img" src="./img/github.webp" alt="product-icon" title="product-icon">
+      </a>
+      <div class="group-info-group">
+        <div class="group-info">
+          <a class="title" href="https://github.com/lispringing/CYYZ" target="_blank">一中南街1号回忆录<sup class="hot">热门</sup></a>
+          <a class="discription" href="https://github.com/lispringing/CYYZ" target="_blank">一中南街1号回忆录的源代码仓库</a>
+        </div>
+        <div class="group-info-button">
+          <a class="linkbutton" href="https://github.com/lispringing/CYYZ" target="_blank">Get it</a>
+          <span class="linkbotton-tips">于Github上获取源码</span>
+        </div>
+      </div>
+    </div>
+
+
+  </div>
+</div>
+
+
+
+
+<!--应用页面-->
+<div class="product-group need-padding" id="应用">
+  <h2 class="group-title">应用汇总</h2>
+  <span class="group-description">小春子的应用汇总</span>
+  <div class="group-items">
+
+        <!--南街1号-->
+        <div class="group-item">
+          <a class="group-item-icon" href="https://cyyz.springing.top" target="_blank">
+            <img class="group-item-icon-img" src="./img/cyyz-logo.webp" alt="product-icon" title="product-icon">
+          </a>
+          <div class="group-info-group">
+            <div class="group-info">
+              <a class="title" href="https://cyyz.springing.top" target="_blank">一中南街1号回忆录<sup class="hot">独家</sup></a>
+              <a class="discription" href="https://cyyz.springing.top" target="_blank">独属于一中人自己的回忆录</a>
+            </div>
+            <div class="group-info-button">
+              <a class="linkbutton" href="https://cyyz.springing.top" target="_blank">访问</a>
+            </div>
+          </div>
+        </div>
+      
+
+
+  </div>
+</div>
 
 <!--页脚-->
   <div class="footer">
