控制台彩蛋

--- a/index.html
+++ b/index.html
@@ -206,7 +206,6 @@
         </div>
       </div>
 
-
     </div>
   </div>
 
@@ -321,12 +320,14 @@
 <!--页脚-->
   <div class="footer">
     <div class="footer-content need-padding">
-      <span class="info">Copyright © 2022-至今 小春子 保留所有权利。</span>
-      <span class="info">由Spring强力驱动</span>
+      <span class="info">Copyright © 2022-至今 <font color="#2b9fff">小春子</font>💖 保留所有权利。</span>
+      <span class="info">由<font color="#2b9fff">Spring</font>💕强力驱动</span>
+      <span class="info">堂吉诃德&奶油小狗</span>
       <div class="info-group"><a class="info" href="https://beian.miit.gov.cn/" target="_blank">鲁ICP备2022030058号</a><a class="info" href="https://github.com/zhheo/HeoWeb" target="_blank">Themed by HeoWeb</a></div>
     </div>
   </div>
 </body>
 <script src="./js/simpleParallax.min.js"></script>
 <script src="./js/main.js"></script>
+<script src="./js/console.js"></script>
 </html>
