--- a/index.html
+++ b/index.html
@@ -62,12 +62,11 @@
         <span class="title">Little Springing</span></span>
       </div>
       <div class="description">
-        <span class="description-text">小春子是一个<del>爱学习</del><br>很有趣的小男女孩</span>
+        <span class="description-text">小春子<br>是一个有趣可爱的人</span>
       </div>
       <div class="first-stack-links">
-        <a href="https://blog.springing.top/about/" class="about-button" target="_blank">关于春子</a>
-        <a href="https://github.com/lispringing" class="about-button social-button" target="_blank">Github</a>
-        <a href="https://blog.springing.top" class="about-button social-button" target="_blank">博客</a>
+        <a href="https://blog.springing.top" class="about-button social-button" target="_blank">我的博客</a>
+        <a href="https://status.springing.top" class="about-button social-button" target="_blank">服务器状态</a>
       </div>
     </div>
     <a href="https://blog.springing.top/about/" class="right-stack" target="_blank">
@@ -212,18 +211,18 @@
 <!--博客介绍页面-->
   <div class="product-banner" style="background-image: linear-gradient(180deg, #274DFF 0%, #6CA4FF 100%);" id="博客">
     <div class="banner-info need-padding">
-      <span class="tips" style="color: white; opacity: 0.6;">爱睡觉的春子</span>
-      <span class="title">#<span class="punctuation">，</span><br>#<span class="punctuation">。</span></span>
+      <span class="tips" style="color: white; opacity: 0.6;">记录生活</span>
+      <span class="title">博客<span class="punctuation"></span><br>分享有意思的事情<span class="punctuation"></span></span>
       <div class="banner-discription-group">
-        <span class="description">#<span class="inline-word">#<span class="punctuation">，</span></span></span>
-        <span class="description">#<span class="inline-word">#<span class="punctuation">。</span></span></span>
+        <span class="description">聚散无常，</span></span></span>
+        <span class="description">别来无恙。</span></span></span>
       </div>
       <div class="link-group">
-        <a class="primary-button" href="#a">#</a>
+        <a class="primary-button" href="https://blog.springing.top">前往</a>
       </div>
     </div>
     <div class="banner-pic">
-      <img loading="lazy" class="banner-pic-img simple-parallax-initialized" src="./img/banner-冰糖红茶.webp" alt="banner image" style="will-change: transform; transform: translate3d(0px, 14px, 0px); transition: transform 2s cubic-bezier(0, 0, 0, 1);">
+      <img loading="lazy" class="banner-pic-img simple-parallax-initialized" src="./img/blog.webp" alt="banner image" style="will-change: transform; transform: translate3d(0px, 14px, 0px); transition: transform 2s cubic-bezier(0, 0, 0, 1);">
     </div>
   </div>
 
@@ -313,9 +312,6 @@
 
 
 
-
-
-
   </div>
 </div>
 
@@ -323,8 +319,7 @@
   <div class="footer">
     <div class="footer-content need-padding">
       <span class="info">Copyright © 2022-至今 <font color="#2b9fff">小春子</font>💖 保留所有权利。</span>
-      <span class="info">由<font color="#2b9fff">Spring</font>💕强力驱动</span>
-      <span class="info">堂吉诃德&奶油小狗</span>
+      <span class="info">由<font color="#2b9fff">Spring</font>强力驱动 为纪念 <font color="#2b9fff">堂吉诃德 & 奶油小狗</font>而生</span>
       <div class="info-group"><a class="info" href="https://beian.miit.gov.cn/" target="_blank">鲁ICP备2022030058号</a><a class="info" href="https://github.com/zhheo/HeoWeb" target="_blank">Themed by HeoWeb</a></div>
     </div>
   </div>
